# DocoLoco

./: .gitignore  README.md  install-flatpak.sh  io.github.mepowerleo10.DocoLoco.yaml  org.docoloco.DocoLoco.yaml  pyproject.toml
.github/workflows/: main.yml
data/: com.mepowerleo10.docoloco.desktop  io.github.mepowerleo10.DocoLoco.desktop  mandoc.css  org.docoloco.DocoLoco.yaml
data/ui/: doc_page.ui  doc_set_card.ui  locator.ui  main.cmb  main.ui  new_page.ui  provider.ui  provider_page.ui  providers_list.ui  providers_list_page.ui  section.ui  widgets.cmb  widgets.ui
docoloco/: __main__.py  config.py  helpers.py  locator.py  main.py  models.py  registry.py  search.py  window.py
docoloco/models/: __init__.py  base.py  doc_set.py  search_result_model.py
docoloco/providers/: __init__.py  base.py  dash.py  dash_provider.py  man.py  man_provider.py
docoloco/providers/dash/: __init__.py  views.py
docoloco/providers/man/: __init__.py  views.py
docoloco/ui/styles/: style.css
docoloco/ui/templates/: about.ui  locator.ui  main.ui  preferences.ui  provider_page.ui  providers_list_page.ui  widgets.cmb
docoloco/widgets/: __init__.py  doc_page.py  locator.py  main_window.py  new_page.py  preferences.py  provider_page.py  providers_list_page.py  section_widget.py
docoloco/window/: __init__.py  application.py  doc_page.py  main.py  new_page.py  provider_page.py  provider_widget.py  providers_list_page.py  providers_list_widget.py  section_widget.py
