[tool.poetry]
name = "docoloco"
version = "0.1.0"
description = ""
authors = ["Mussa Mipawa <mepowerleo10@gmail.com>"]
readme = "README.md"
repository = "github.com/mepowerleo10/DocoLoco"

[tool.poetry.dependencies]
python = "^3.12"
pygobject = "^3.46.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pygobject-stubs = "^2.10.0"

[tool.poetry.scripts]
docoloco = "docoloco.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
