[tool.poetry]
name = "docoloco"
version = "0.2.0"
description = ""
authors = ["Mussa Mipawa <mepowerleo10@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mepowerleo10/DocoLoco"

[tool.poetry.dependencies]
python = "^3.11"
PyGObject = "^3.46.0"
beautifulsoup4 = "^4.12.3"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
PyGObject-stubs = "^2.10.0"

[tool.poetry.scripts]
docoloco = "docoloco.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
